--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,13 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
 
+  #firebase
+  firebase_core: ^0.5.0
+  firebase_auth: ^0.6.6
+  cloud_firestore: ^0.8.2+3
+
+  provider: ^4.3.2+1
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
