--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,18 +29,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  firebase_auth: ^3.3.15 # new
+  google_sign_in: ^5.3.0
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-
-  #firebase
-  firebase_core: ^0.5.0
-  firebase_auth: ^0.6.6
-  cloud_firestore: ^0.8.2+3
-
-  provider: ^4.3.2+1
 
 dev_dependencies:
   flutter_test:
@@ -65,7 +60,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/images/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
