--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -76,6 +76,10 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
+  fonts:
+     - family: Nunito
+       fonts:
+         - asset: assets/fonts/Nunito.ttf
   # fonts:
   #   - family: Schyler
   #     fonts:
