--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,8 +29,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  firebase_auth: ^3.3.15 # new
-  google_sign_in: ^5.3.0
+  flutter_svg: ^0.19.0
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -62,6 +61,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/icons/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
