--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,14 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_svg: ^0.19.0
+  intl: ^0.16.1
+  sqflite: ^1.3.1+1
+  auto_size_text: ^2.1.0
+  path: ^1.7.0
+  flutter_local_notifications: ^3.0.1+2
+  timezone: ^0.5.9
+  animated_text_kit: ^2.5.3
+  animated_widgets: ^1.0.6
 
 
   # The following adds the Cupertino Icons font to your application.
