--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,13 +29,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_svg: ^0.19.0
+  flutter_svg: ^1.0.3
   intl: ^0.16.1
-  sqflite: ^1.3.1+1
+  sqflite: ^2.0.2+1
   auto_size_text: ^2.1.0
-  path: ^1.7.0
-  flutter_local_notifications: ^3.0.1+2
-  timezone: ^0.5.9
+  path: ^1.8.1
+  flutter_local_notifications: ^9.6.0
+  timezone: ^0.8.0
   animated_text_kit: ^2.5.3
   animated_widgets: ^1.0.6
   flutter_palette: ^1.1.0+1
