--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,18 +30,20 @@ dependencies:
   flutter:
     sdk: flutter
   intl: ^0.17.0
-  sqflite: ^2.0.2+1
+  sqflite: ^1.3.1+1
   auto_size_text: ^2.1.0
+  flutter_local_notifications: ^9.0.0
   path: ^1.7.0
-  flutter_local_notifications: ^3.0.1+2
-  timezone: ^0.5.9
+  timezone: ^0.8.0
   animated_text_kit: ^2.5.3
   animated_widgets: ^1.0.6
+  firebase_auth: ^1.2.0
   flutter_signin_button: ^1.0.0
-  google_sign_in: ^4.5.9
+  firebase_core: ^1.2.0
+  cloud_firestore: ^2.2.0
   provider: ^5.0.0
-  firebase_auth_web: ^3.3.16
-  firebase_auth: ^3.3.19
+  google_sign_in: ^4.5.9
+  uuid: ^3.0.4
 
 
 
