--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,10 +30,10 @@ dependencies:
   flutter:
     sdk: flutter
   intl: ^0.17.0
-  sqflite: ^1.3.1+1
+  sqflite: ^2.0.0+3
+  path_provider: ^2.0.1
   auto_size_text: ^2.1.0
   flutter_local_notifications: ^9.0.0
-  path: ^1.7.0
   timezone: ^0.8.0
   animated_text_kit: ^2.5.3
   animated_widgets: ^1.0.6
