--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -3,7 +3,8 @@
   
   <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
   <uses-permission android:name="android.permission.VIBRATE" />
-  
+  <uses-permission android:name="android.permission.INTERNET" />
+
    <application
         android:label="gardenio_tubes"
         android:name="${applicationName}"
